# Qt2048

./: CMakeLists.txt  README.md  main.cpp  mainwindow.h  qt2048.cpp  qt2048.h
